--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                 <h3 id="category-shoes-title" class="text-xl font-semibold text-center">Shoes</h3>
             </a>
 
-            <!-- Category 2: Sandals -->
-            <a href="products.html?category=sandals" class="group">
+            <!-- Category 2: Bags -->
+            <a href="products.html?category=bags" class="group">
                 <div class="aspect-square bg-zinc-100 rounded-2xl overflow-hidden mb-4">
-                    <img id="category-sandals-image" src="https://images.unsplash.com/photo-1562273138-f46be4ebdf09?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Luxury Women's Sandals" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500">
+                    <img id="category-bags-image" src="https://images.unsplash.com/photo-1591561954557-26941169b49e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="Evening Clutches" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500">
                 </div>
-                <h3 id="category-sandals-title" class="text-xl font-semibold text-center">Sandals</h3>
+                <h4 id="category-bags-title" class="text-xl font-semibold text-center">Bags</h4>
             </a>
 
             <!-- Category 3: Accessories -->
@@ -83,6 +83,7 @@
         </div>
     </div>
 </section>
+
 
 <!-- Featured Products -->
 <section id="featured-products" class="py-20 px-6">
