--- a/index.html
+++ b/index.html
@@ -4,41 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LuxuryByJulie | Elegant Women's Footwear & Accessories</title>
-
     <!-- Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-
     <!-- Tailwind Configuration -->
     <script src="js/tailwind.config.js"></script>
-
     <!-- Custom Styles -->
     <link rel="stylesheet" href="css/styles.css">
-
     <!-- Alpine.js via CDN -->
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-
     <!-- Load JavaScript files -->
     <script src="js/products.js?v=6"></script>
     <script src="js/categories.js?v=6"></script>
     <script src="js/app.js?v=6"></script>
     <script src="js/components.js?v=6"></script>
 </head>
-
 <body class="bg-zinc-50" x-data="{ scrollTop: false }" @scroll.window="scrollTop = window.pageYOffset > 100">
 <!-- SVG Sprite Definitions -->
 <div x-data="svgSprites" x-html="template"></div>
-
 <!-- Navigation -->
 <div x-data="siteHeader({ activeLink: 'home' })" x-html="template"></div>
-
 <!-- Hero Section -->
 <section class="pt-32 pb-20 px-6">
     <div class="max-w-7xl mx-auto">
         <div class="grid md:grid-cols-2 gap-12 items-center">
             <div>
-                <h1 id="hero-heading" class="text-5xl md:text-7xl font-bold leading-tight mb-6">Elegant Luxury <span class="text-pink-500">Footwear</span> & Accessories</h1>
+                <h1 id="hero-heading" class="text-5xl md:text-7xl font-bold leading-tight mb-6">Elegant Luxury <span class="text-primary">Footwear</span> & Accessories</h1>
                 <p id="hero-subheading" class="text-xl text-zinc-600 mb-8">Discover our curated collection of premium women's shoes, sandals, and accessories designed to elevate your style.</p>
-                <a href="products.html" id="hero-cta" class="inline-block bg-pink-500 text-white px-12 py-4 text-lg font-medium hover:bg-pink-600 transition-colors rounded-lg">
+                <a href="products.html" id="hero-cta" class="inline-block bg-primary text-white px-12 py-4 text-lg font-medium hover:bg-primary-hover transition-colors rounded-lg">
                     Shop Now
                 </a>
             </div>
@@ -51,7 +43,6 @@
         </div>
     </div>
 </section>
-
 <!-- Categories Section -->
 <section id="categories" class="py-16 px-6 bg-white">
     <div class="max-w-7xl mx-auto">
@@ -64,7 +55,6 @@
                 </div>
                 <h3 id="category-shoes-title" class="text-xl font-semibold text-center">Shoes</h3>
             </a>
-
             <!-- Category 2: Bags -->
             <a href="products.html?category=bags" class="group">
                 <div class="aspect-square bg-zinc-100 rounded-2xl overflow-hidden mb-4">
@@ -72,7 +62,6 @@
                 </div>
                 <h4 id="category-bags-title" class="text-xl font-semibold text-center">Bags</h4>
             </a>
-
             <!-- Category 3: Accessories -->
             <a href="products.html?category=accessories" class="group">
                 <div class="aspect-square bg-zinc-100 rounded-2xl overflow-hidden mb-4">
@@ -83,17 +72,12 @@
         </div>
     </div>
 </section>
-
-
 <!-- Featured Products -->
 <section id="featured-products" class="py-20 px-6">
     <div class="max-w-7xl mx-auto">
         <h2 id="featured-products-heading" class="text-3xl font-bold mb-12">Featured Products</h2>
-
         <!-- Featured Products - Using Alpine.js to render from product data -->
-        <div class="grid md:grid-cols-3 gap-8" x-data="{
-                featuredProducts: PRODUCTS.filter(p => p.isFeatured).slice(0, 3)
-            }">
+        <div class="grid md:grid-cols-3 gap-8" x-data="{ featuredProducts: PRODUCTS.filter(p => p.isFeatured).slice(0, 3) }">
             <template x-for="product in featuredProducts" :key="product.id">
                 <article class="group">
                     <a :href="'product.html?slug=' + product.slug">
@@ -108,34 +92,21 @@
                         </div>
                         <span class="text-lg font-bold" x-text="'$' + (product.salePrice || product.base_price || product.price).toFixed(2)"></span>
                     </div>
-                    <button
-                            class="w-full bg-pink-500 text-white py-4 rounded-xl hover:bg-pink-600 transition-colors"
-                            @click="$store.cart.addItem(product, 1); $store.ui.showCartNotification()">
+                    <button class="w-full bg-primary text-white py-4 rounded-xl hover:bg-primary-hover transition-colors" @click="$store.cart.addItem(product, 1); $store.ui.showCartNotification()">
                         Add to Cart
                     </button>
                 </article>
             </template>
-
             <!-- Cart notification -->
-            <div
-                    class="fixed bottom-24 right-4 bg-black text-white px-6 py-3 rounded-lg shadow-lg z-50 transition-all duration-300"
-                    x-show="$store.ui.cartNotificationVisible"
-                    x-transition:enter="transition ease-out duration-300"
-                    x-transition:enter-start="opacity-0 translate-y-2"
-                    x-transition:enter-end="opacity-100 translate-y-0"
-                    x-transition:leave="transition ease-in duration-200"
-                    x-transition:leave-start="opacity-100 translate-y-0"
-                    x-transition:leave-end="opacity-0 translate-y-2">
+            <div class="fixed bottom-24 right-4 bg-black text-white px-6 py-3 rounded-lg shadow-lg z-50 transition-all duration-300" x-show="$store.ui.cartNotificationVisible" x-transition:enter="transition ease-out duration-300" x-transition:enter-start="opacity-0 translate-y-2" x-transition:enter-end="opacity-100 translate-y-0" x-transition:leave="transition ease-in duration-200" x-transition:leave-start="opacity-100 translate-y-0" x-transition:leave-end="opacity-0 translate-y-2">
                 Item added to cart!
             </div>
         </div>
-
         <div class="mt-12 text-center">
-            <a href="products.html" id="view-all-button" class="inline-block border-2 border-pink-500 text-pink-500 px-8 py-3 rounded-lg hover:bg-pink-500 hover:text-white transition-colors">View All Products</a>
+            <a href="products.html" id="view-all-button" class="inline-block border-2 border-primary text-primary px-8 py-3 rounded-lg hover:bg-primary hover:text-white transition-colors">View All Products</a>
         </div>
     </div>
 </section>
-
 <!-- About Section -->
 <section id="about" class="py-20 px-6 bg-white">
     <div class="max-w-5xl mx-auto">
@@ -154,30 +125,26 @@
                 <p id="about-text-2" class="text-lg text-zinc-600 mb-6">
                     Founded with a passion for quality craftsmanship and timeless design, our brand offers pieces that seamlessly blend into your wardrobe while making a statement.
                 </p>
-                <a href="#contact" id="about-contact-button" class="inline-block bg-pink-500 text-white px-8 py-3 rounded-lg hover:bg-pink-600 transition-colors">Contact Us</a>
+                <a href="#contact" id="about-contact-button" class="inline-block bg-primary text-white px-8 py-3 rounded-lg hover:bg-primary-hover transition-colors">Contact Us</a>
             </div>
         </div>
     </div>
 </section>
-
 <!-- Newsletter -->
-<section id="newsletter" class="py-20 px-6 bg-zinc-900 text-white">
+<section id="newsletter" class="py-20 px-6 bg-primary text-white">
     <div class="max-w-2xl mx-auto text-center">
         <h2 id="newsletter-heading" class="text-3xl font-bold mb-6">Stay Updated</h2>
-        <p id="newsletter-subheading" class="text-zinc-400 mb-8">Subscribe to our newsletter for exclusive offers and updates</p>
+        <p id="newsletter-subheading" class="text-primary-200 mb-8">Subscribe to our newsletter for exclusive offers and updates</p>
         <form class="flex flex-col md:flex-row gap-4">
-            <input type="email" id="newsletter-email" placeholder="Enter your email" class="flex-1 px-6 py-4 bg-zinc-800 rounded-xl text-white placeholder:text-zinc-500 focus:outline-none focus:ring-2 focus:ring-pink-400">
-            <button type="submit" id="newsletter-submit" class="px-8 py-4 bg-pink-500 text-white rounded-xl hover:bg-pink-600 transition-colors">
+            <input type="email" id="newsletter-email" placeholder="Enter your email" class="flex-1 px-6 py-4 bg-primary-light rounded-xl text-white placeholder:text-zinc-500 focus:outline-none focus:ring-2 focus:ring-primary-focus">
+            <button type="submit" id="newsletter-submit" class="px-8 py-4 bg-primary-light text-white rounded-xl hover:bg-primary-hover transition-colors">
                 Subscribe
             </button>
         </form>
     </div>
 </section>
-
 <!-- Footer -->
 <div x-data="siteFooter" x-html="template"></div>
-
 <div x-data="floatingButtons" x-html="template"></div>
-
 </body>
 </html>
